<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Frame</string>
    <string name="string_title1">页面1</string>
    <string name="string_title2">页面2</string>
    <string name="string_title3">页面3</string>
    <string name="string_title4">页面4</string>
    <string name="string_title5">页面5</string>
    <string name="string_btn_text1">stara</string>
    <string name="string_btn_text2">create</string>
    <string name="string_btn_text3">btn3</string>
    <string name="string_btn_text4">btn4</string>

    <string name="string_btn_text_return_Arouter">测试Arouter跳转</string>
    <string name="string_btn_schultegril_game">跨模块跳转舒尔特</string>
<!--  五子棋  -->
    <string name="string_btn_interceptor">五子棋</string>
    <string name="string_btn_admitdefeat">认输</string>
    <string name="string_btn_restart">再来一局</string>
    <string name="string_btn_undo">悔棋</string>

<!--  五子棋  -->

    <string name="string_btn_onactivityforresult">Arouter代值跳转回调</string>
    <string name="string_btn_zoomImageView">缩放imageview</string>


    <string name="string_powerSurvey">电力调查</string>
    <string name="string_powerSurvey_ordinary">一般型电力调查</string>
    <string name="string_powerSurvey_user">电力用户普查</string>
</resources>