<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_dome_title"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn1_dome"
        android:text="@string/string_btn_text1"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt2_dome"
        android:text="@string/string_btn_text2"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn3_dome"
        android:text="@string/string_btn_text3"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn4_dome"
        android:text="@string/string_btn_text4"/>
    <ImageView
        android:id="@+id/img_dome_code"
        android:layout_width="200dp"
        android:layout_height="200dp"/>

</LinearLayout>