<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_go">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_36"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8">

        <Button
            android:id="@+id/btn_gobank_admitdefeat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"

            android:layout_weight="1"
            android:text="@string/string_btn_admitdefeat" />

        <Button
            android:id="@+id/btn_statr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:layout_weight="1"
            android:text="@string/string_btn_restart" />


        <Button
            android:id="@+id/btn_gobank_undo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:layout_weight="1"
            android:text="@string/string_btn_undo" />

    </LinearLayout>

    <com.erajiezhang.view.GobangView
        android:id="@+id/gobangview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" />


</RelativeLayout>